Menu Fix & Tooltip Removal
Updated some CSS for the dropdowns in the menu on mobile which the text
was appearing as a dark gray, which made it hard to read with the blue.
Tool tips under some of the devicons since it is redundant information
for those which are wordmarked.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -111,6 +111,12 @@ a{
 	& .navbar-toggle:focus, & .navbar-toggle:hover {
 		background-color: $primaryColorDark;
 	}
+
+	@media (max-width: 767px){
+		& .navbar-nav .open .dropdown-menu>li>a {
+			color: $primaryTextColor_dark;
+		}
+	}
 }
 
 .navbar-brand	{
